# libLNK

./: .gitignore  CHANGES  INSTALL.md  README.md  appveyor.yml  version_info.bat  version_info.h  version_info.nsh
ci/appveyor/: prepare_github_deploy.ps1  test_script.bat  version_info_update.bat
cmake/: vs2010.bat
docs/: libLNK.xcf  reverse_engineering.xlsx
src/: CMakeLists.txt
src/common/: CMakeLists.txt  filesystemfunc.cpp  filesystemfunc.h  stringfunc.cpp  stringfunc.h
src/libLNK/: CMakeLists.txt  ItemID.cpp  MemoryBuffer.cpp  MemoryBuffer.h  libLNK.cpp  libLNK.h
src/libLNK_unittest/: CMakeLists.txt  TestLNK.cpp  TestLNK.h  main.cpp
src/libLNK_unittest/tests/: WINDOWS.lnk  cmd.exe.lnk  google.url  testCreateCmdExe.legacy.lnk  testWin7CdRom.lnk  testWin7LongFilename.lnk  testWin7LongFolderName.lnk  testWin7MappedDrive.lnk  testWin7MultipleFolders.lnk  testWin7NetworkPath.lnk  testWin7SpaceFilename.lnk  testWin7SpaceFolder.lnk  testWin7SpecialCharactersCcedil.lnk  testWin7SpecialCharactersEacute.lnk  testWin7SpecialCharactersNtilde.lnk  testWin7UsbDrive2.lnk  testWin7UsbDriveReadOnly.lnk  testWin7UsbDriveRemovableMedium.lnk  testWinXpArguments.lnk  testWinXpCmdExe.lnk  testWinXpComment.lnk  testWinXpNotepadArguments.lnk  testWinXpNotepadComments.lnk  testWinXpNotepadDefault.lnk  testWinXpNotepadHotKey.lnk  testWinXpNotepadIconTree.lnk  testWinXpNotepadMaximized.lnk  testWinXpNotepadMinimized.lnk  testWinXpSystemIni.lnk  thisisasuperlongfilename.txt.lnk  usbdrive.txt.lnk
